cabal-version:      2.4
name:               metadata-benchmark
version:            0.1.0.0
author:             Swann Moreau
maintainer:         evertedsphere@gmail.com
extra-source-files: CHANGELOG.md

executable metadata-benchmark
  main-is:          Main.hs
  build-depends:
    , aeson
    , async
    , base               ^>=4.14.1.0
    , bytestring
    , clock
    , formatting
    , mtl
    , postgresql-simple
    , split
    , statistics
    , stm
    , text
    , timers
    , uuid
    , vector

  hs-source-dirs:   app
  default-language: Haskell2010
